--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body::before {
   margin-top: 0;
 }
 
-.imagem-login {
+/* .imagem-login {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -36,11 +36,7 @@ body::before {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-
-#index-banner {
-  padding-bottom: 5rem;
-}
+} */
 
 .container {
   
@@ -67,13 +63,19 @@ body::before {
   border: none;
 }
 
+h1{
+  text-align: center;
+}
 .texto-login {
   color: #424242;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 50px;
   margin-bottom: 1em;
+  
 }
-
+td{
+  
+}
 .btn {
   margin-top: 4em;
 }
@@ -94,6 +96,10 @@ body::before {
 
 #botao-acessar {
   background-color: #424242;
+}
+
+.margin-right {
+  margin-right: 10px; /* Ajuste o valor conforme necessário */
 }
 
 h1.titulo {
